testing/tests/ui/is_defined.stderr
error: `is defined` operator can only be used on variables, not on their fields
 --> <source attribute>:1:7
  |
       1 | {% if x.y is defined %}{% endif %}
         |       ^ close to this token
         |
 --> tests/ui/is_defined.rs:4:3
  |
4 | #[template(
  |   ^^^^^^^^

error: `is defined` operator can only be used on variables
 --> <source attribute>:1:7
  |
       1 | {% if true is defined %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:11:3
   |
11 | #[template(
   |   ^^^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if true is %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:18:3
   |
18 | #[template(
   |   ^^^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:25:3
   |
25 | #[template(
   |   ^^^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is blue %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:32:3
   |
32 | #[template(
   |   ^^^^^^^^

error: expected `defined` or `not defined` after `is`
 --> <source attribute>:1:7
  |
       1 | {% if x is blue.red %}{% endif %}
         |       ^ close to this token
         |
  --> tests/ui/is_defined.rs:39:3
   |
39 | #[template(
   |   ^^^^^^^^
